# coordinate

./: .travis.yml  LICENCE  README.md  Setup.lhs  changelog  changelog.md  coordinate.cabal  other-licence.md
etc/: 20140929-edwardk-Optic  20141102-edwardk-Coordinate  LICENCE
src/Data/: Geodetic.hs
src/Data/GPS/: Coordinate.hs
src/Data/GPS/Coordinate/: Coordinate.hs  DegreesLatitude.hs  DegreesLongitude.hs  Latitude.hs  Longitude.hs  Minutes.hs  Seconds.hs
src/Data/Geo/: Coordinate.hs
src/Data/Geo/Coordinate/: Coordinate.hs  DegreesLatitude.hs  DegreesLongitude.hs  Latitude.hs  Longitude.hs  Minutes.hs  Seconds.hs
src/Data/Geodetic/: ECEF.hs  Ellipsoid.hs  EllipsoidReaderT.hs  HasDoubles.hs  LL.hs  LLH.hs  Sphere.hs  XY.hs
test/: hunit_tests.hs
