name:               coordinate
version:            0.0.1
license:            BSD3
license-File:       etc/LICENCE
author:             Tony Morris <ʇǝu˙sıɹɹoɯʇ@ןןǝʞsɐɥ>
maintainer:         Tony Morris
copyright:          Copyright (C) 2010-2013 Tony Morris
synopsis:           A representation of latitude and longitude
category:           Development
description:        A representation of latitude and longitude
homepage:           https://github.com/tonymorris/coordinate
bug-reports:        https://github.com/tonymorris/coordinate/issues
cabal-version:      >= 1.10
build-type:         Custom

source-repository   head
  type:             git
  location:         git@github.com:tonymorris/coordinate.git

flag                small_base
  description:      Choose the new, split-up base package.

library
  default-language:
                    Haskell2010

  build-depends:
                    base < 5 && >= 3

  ghc-options:
                    -Wall
                    -O2

  hs-source-dirs:
                    src

  exposed-modules:
                    Data.GPS.Coordinate

test-suite doctests
  type:
                    exitcode-stdio-1.0

  main-is:
                    doctests.hs

  default-language:
                    Haskell2010

  build-depends:
                    base < 5 && >= 3,
                    doctest >= 0.9.7,
                    filepath >= 1.3,
                    directory >= 1.1,
                    QuickCheck >= 2.0

  ghc-options:
                    -Wall
                    -threaded

  hs-source-dirs:
                    test
